🐛 prevent sidebar from overlapping toolbars

--- a/packages/bytemd/src/index.scss
+++ b/packages/bytemd/src/index.scss
@@ -137,6 +137,7 @@ $max-width: 800px;
   &-body {
     flex-grow: 1;
     overflow: auto;
+    position: relative;
   }
 
   &-editor {
